--- a/_config.yml
+++ b/_config.yml
@@ -30,12 +30,13 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
+theme: minima
+plugins:
+  - jekyll-feed
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
-#theme: minima
-#plugins:
-#  - jekyll-feed
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
